js/src/tests/test262/built-ins/NativeErrors/SyntaxError/prototype/constructor.js
assert
.
sameValue
(
SyntaxError
.
prototype
.
constructor
SyntaxError
)
;
verifyNotEnumerable
(
SyntaxError
.
prototype
"
constructor
"
)
;
verifyWritable
(
SyntaxError
.
prototype
"
constructor
"
)
;
verifyConfigurable
(
SyntaxError
.
prototype
"
constructor
"
)
;
reportCompare
(
0
0
)
;
